--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   font-family: "Open Sans", "Microsoft JhengHei",sans-serif;
-  background-image:url("sky.jpg");
+  background-image:url("sunset.jpg");
   background-repeat:no-repeat;
   background-size:cover;
 }
@@ -159,44 +159,21 @@ li a{
     color: lightgoldenrodyellow;
 }
 /*What to eat */
-#WhatToEat{
+#WhatToEat form,h4{
   text-align: center;
-}
-#WhatToEat h2{
-  text-align: left;
 }
 form{
   margin:5px auto;
 }
 select,option{
-	color:#333;
-	background-color: floralwhite;
-	border-radius:6px;
-	padding:1%;
-	font-family: "Open Sans", "Microsoft JhengHei",sans-serif;
-	text-align: center;
-	width:150px;
+		color:#333;
+    background-color: floralwhite;
+		border-radius:6px;
+		padding:1%;
+    font-family: "Open Sans", "Microsoft JhengHei",sans-serif;
+    text-align: center;
+    width:150px;
 }
 option:enabled{
-	background-color: rgb(250, 250, 210);
-}
-.clickable{
-	color:#333;
-	background-color: rgb(250, 250, 210);
-	border-radius:6px;
-	padding:1%;
-	margin:1%;
-	font-family: "Open Sans", "Microsoft JhengHei",sans-serif;
-	text-align: center;
-	width:100px;
-}
-.disclickable{
-	background-color: #BBBBBB;
-	border-radius:6px;
-	padding:1%;
-	margin:1%;
-	width:100px;
-}
-#result{
-	margin:2%;
+  background-color: rgb(250, 250, 210)
 }
